package com.company.controller;

public interface Controller
{

    void run();

}
