package com.company.view;

public interface View
{

    void render();

    void say(final String message);

}
